--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://trashtatur.github.io/JPSCICD/myapp/",
+  "homepage": "https://trashtatur.github.io/JPSCICD/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
